<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="mode">Mode</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="cancel">Cancel</string>
    <string name="system">System</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="themes">Themes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>